# AFK-bot-BlackOps6

./: .gitignore  CMakeLists.txt  README.md
include/: Logger.h  Movement.h  Presets.h  Script.h  State.h  TUI.h  Utils.h
src/: Logger.cpp  Movement.cpp  Presets.cpp  Script.cpp  State.cpp  TUI.cpp  Utils.cpp  main.cpp
